# indk

./: .gitignore  Cargo.toml  data.json  shell.nix
android/: .gitignore
android/src/main/: AndroidManifest.xml
indk-proto/: Cargo.toml
indk-proto/src/v1/: mod.rs
indk-server/: Cargo.toml
indk-server/src/: main.rs
indk-server/src/v1/: mod.rs
src/: cert.pem  lib.rs  main.rs
