[package]
name = "indk"
version = "0.1.0"
edition.workspace = true
publish = false

[workspace]
members = [
  "indk-proto",
  "indk-server",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
indk-proto  = { path = "indk-proto"  }
indk-server = { path = "indk-server" }

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
indk-proto.workspace = true

eyre = "0.6"
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", default-features = false }
reqwest = "0.12"
reqwest-websocket = { version = "0.5", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }

ike = { git = "https://github.com/ori-ui/ike" }

[dependencies.openssl]
version = "0.10"
features = ["vendored"]

[package.metadata.android]
package = "org.indk.indk"
name = "Indk"
min-sdk = 23
key-properties = "key.properties"

[profile.dev]
debug = false
