[package]
name = "indk-server"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
indk-proto.workspace = true

axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
eyre = "0.6"
serde_json = "1"
futures = { version = "0.3", default-features = false }
dashmap = { version = "6", features = ["serde"] }
parking_lot = { version = "0.12", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
